--- a/SD_Loaner/src/GUI/GUI_Main.form
+++ b/SD_Loaner/src/GUI/GUI_Main.form
@@ -460,6 +460,8 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="pnNode" min="-2" max="-2" attributes="0"/>
                           <Component id="jlFeedbackNetwork" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="Mine" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="jScrollPane3" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jScrollPane2" pref="508" max="32767" attributes="0"/>
@@ -476,7 +478,11 @@
                               <Component id="pnNode" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="jlFeedbackNetwork" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="0" pref="325" max="32767" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="Mine" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="jScrollPane3" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="0" pref="198" max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
@@ -631,6 +637,29 @@
                 <Property name="text" type="java.lang.String" value="All is good."/>
               </Properties>
             </Component>
+            <Component class="javax.swing.JButton" name="Mine">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Mine"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="MineActionPerformed"/>
+              </Events>
+            </Component>
+            <Container class="javax.swing.JScrollPane" name="jScrollPane3">
+              <AuxValues>
+                <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
+              </AuxValues>
+
+              <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
+              <SubComponents>
+                <Component class="javax.swing.JTextArea" name="jtaBlockReader">
+                  <Properties>
+                    <Property name="columns" type="int" value="20"/>
+                    <Property name="rows" type="int" value="5"/>
+                  </Properties>
+                </Component>
+              </SubComponents>
+            </Container>
           </SubComponents>
         </Container>
       </SubComponents>
